syntax = "proto3";
option csharp_namespace = "GameNest.Grpc.Reviews";
package reviews;

service ReviewGrpcService {
  rpc GetReviews (GetReviewsRequest) returns (PagedReviewsResponse);
  rpc GetReviewById (GetReviewByIdRequest) returns (ReviewResponse);
}

message GetReviewsRequest {
  int32 pageNumber = 1;
  int32 pageSize = 2;
  string gameId = 3;
  string customerId = 4;
  string searchText = 5;
  string orderBy = 6;
}

message GetReviewByIdRequest {
  string id = 1;
}

message Review {
  string id = 1;
  string gameId = 2;
  string customerId = 3;
  string text = 4;
  double rating = 5;
  repeated Reply replies = 6;
}

message Reply {
  string id = 1;
  string customerId = 2;
  string text = 3;
}

message ReviewResponse {
  Review review = 1;
}

message PagedReviewsResponse {
  repeated Review items = 1;
  int32 totalCount = 2;
  int32 pageNumber = 3;
  int32 pageSize = 4;
}
